Fix icon spacing with One Dark in preview pane

--- a/styles/theme-overrides.less
+++ b/styles/theme-overrides.less
@@ -1,4 +1,19 @@
 atom-workspace {
+  // One Dark/One Light
+  &.theme-one-dark-ui,
+  &.theme-one-light-ui {
+    // Find in Project
+    .preview-pane .path.list-nested-item {
+      .icon-book,
+      .icon-file-media,
+      .icon-file-text {
+        &:before {
+          top: 0;
+        }
+      }
+    }
+  }
+
   // Atom Material
   &.theme-atom-material-ui {
     // Tab Bar
